--- a/EgitimPlatformuAI/Views/AddQuestionScreen/AddQuestionScreen.storyboard
+++ b/EgitimPlatformuAI/Views/AddQuestionScreen/AddQuestionScreen.storyboard
@@ -46,16 +46,32 @@
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nXL-ze-Wqi">
                                 <rect key="frame" x="20" y="149" width="113" height="35"/>
+                                <color key="backgroundColor" name="summer"/>
+                                <color key="tintColor" name="darkBlue"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Add Lesson"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="12"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="addLessonButtonTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Hz5-4V-CdG"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lty-6h-ZZb">
                                 <rect key="frame" x="245.33333333333334" y="149" width="127.66666666666666" height="35"/>
+                                <color key="backgroundColor" name="summer"/>
+                                <color key="tintColor" name="darkBlue"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Add Question"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="12"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="addQuestionButtonTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="cgG-Kn-Tgg"/>
                                 </connections>
@@ -97,6 +113,9 @@
         </namedColor>
         <namedColor name="darkBlue">
             <color red="0.11764705882352941" green="0.13725490196078433" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="summer">
+            <color red="0.94117647058823528" green="0.73333333333333328" blue="0.47058823529411764" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
