--- a/EgitimPlatformuAI/Views/NewLessonScreen/NewLessonScreen.storyboard
+++ b/EgitimPlatformuAI/Views/NewLessonScreen/NewLessonScreen.storyboard
@@ -16,22 +16,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select a Class" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="E53-Nm-pS4">
-                                <rect key="frame" x="137" y="139" width="119" height="34"/>
-                                <color key="backgroundColor" name="softBlue"/>
-                                <color key="textColor" name="darkBlue"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                            <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Du-ec-DLc" customClass="LottieAnimationView" customModule="Lottie">
+                                <rect key="frame" x="121.66666666666669" y="89" width="150" height="150"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="KiL-v4-7sj"/>
+                                    <constraint firstAttribute="width" constant="150" id="sGM-S2-H8z"/>
+                                </constraints>
+                            </view>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Lesson Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0xi-x3-rCf">
-                                <rect key="frame" x="20" y="213" width="353" height="34"/>
-                                <color key="backgroundColor" name="softBlue"/>
+                                <rect key="frame" x="20" y="333" width="353" height="34"/>
+                                <color key="backgroundColor" name="aliceblUE"/>
                                 <color key="textColor" name="darkBlue"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MdH-ia-wac">
-                                <rect key="frame" x="140" y="327" width="113" height="34.333333333333314"/>
+                                <rect key="frame" x="140" y="407" width="113" height="34.333333333333314"/>
                                 <color key="backgroundColor" name="sapphireBlue"/>
                                 <color key="tintColor" name="porcelain"/>
                                 <state key="normal" title="Button"/>
@@ -43,21 +44,31 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select a Class" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="E53-Nm-pS4">
+                                <rect key="frame" x="20" y="259" width="119" height="34"/>
+                                <color key="backgroundColor" name="aliceblUE"/>
+                                <color key="textColor" name="darkBlue"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" name="charcoal"/>
                         <constraints>
-                            <constraint firstItem="0xi-x3-rCf" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="0Qu-tA-joV"/>
-                            <constraint firstItem="MdH-ia-wac" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="CUP-0o-09K"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0xi-x3-rCf" secondAttribute="trailing" constant="20" id="X3x-hb-0Xj"/>
-                            <constraint firstItem="0xi-x3-rCf" firstAttribute="top" secondItem="E53-Nm-pS4" secondAttribute="bottom" constant="40" id="keB-97-pUR"/>
-                            <constraint firstItem="MdH-ia-wac" firstAttribute="top" secondItem="0xi-x3-rCf" secondAttribute="bottom" constant="80" id="p26-Iz-7Og"/>
-                            <constraint firstItem="E53-Nm-pS4" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="rMZ-uL-qWq"/>
-                            <constraint firstItem="E53-Nm-pS4" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="80" id="sGj-b0-IEn"/>
+                            <constraint firstItem="0Du-ec-DLc" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="3AV-GF-4O0"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0xi-x3-rCf" secondAttribute="trailing" constant="20" id="FFK-P4-g7G"/>
+                            <constraint firstItem="0xi-x3-rCf" firstAttribute="top" secondItem="E53-Nm-pS4" secondAttribute="bottom" constant="40" id="IJH-fd-xtt"/>
+                            <constraint firstItem="MdH-ia-wac" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="LuZ-30-XQJ"/>
+                            <constraint firstItem="0xi-x3-rCf" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="Q3A-G1-VJV"/>
+                            <constraint firstItem="E53-Nm-pS4" firstAttribute="top" secondItem="0Du-ec-DLc" secondAttribute="bottom" constant="20" id="do4-4b-SSB"/>
+                            <constraint firstItem="0Du-ec-DLc" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="30" id="j9X-Jl-3q8"/>
+                            <constraint firstItem="E53-Nm-pS4" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="poC-Cn-2si"/>
+                            <constraint firstItem="MdH-ia-wac" firstAttribute="top" secondItem="0xi-x3-rCf" secondAttribute="bottom" constant="40" id="t0H-mQ-lAF"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="levelTextField" destination="E53-Nm-pS4" id="7kA-im-1Ok"/>
+                        <outlet property="lottieView" destination="0Du-ec-DLc" id="fGZ-qF-wD1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -66,6 +77,9 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="aliceblUE">
+            <color red="0.96078431372549022" green="0.97647058823529409" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="charcoal">
             <color red="0.17254901960784313" green="0.20000000000000001" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
@@ -77,9 +91,6 @@
         </namedColor>
         <namedColor name="sapphireBlue">
             <color red="0.23921568627450981" green="0.41960784313725491" blue="0.88235294117647056" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="softBlue">
-            <color red="0.8901960784313725" green="0.94901960784313721" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
