--- a/EgitimPlatformuAI/Views/Register/Register.storyboard
+++ b/EgitimPlatformuAI/Views/Register/Register.storyboard
@@ -16,14 +16,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="zJD-jc-haq">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="zJD-jc-haq">
                                 <rect key="frame" x="0.0" y="59" width="393" height="709"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gpb-6Y-YSE">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gpb-6Y-YSE">
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="709"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Kl-gH-Xbl" customClass="CustomBackButtonView" customModule="EgitimPlatformuAI" customModuleProvider="target">
-                                                <rect key="frame" x="20" y="20" width="40" height="40"/>
+                                                <rect key="frame" x="20" y="0.0" width="40" height="40"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="7vL-rV-8MQ"/>
@@ -31,13 +31,13 @@
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello! Register to get started" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SlC-38-UhK">
-                                                <rect key="frame" x="20" y="80" width="353" height="71.666666666666686"/>
+                                                <rect key="frame" x="20" y="60.000000000000007" width="353" height="71.666666666666686"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="30"/>
                                                 <color key="textColor" name="summer"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qau-rg-uMU">
-                                                <rect key="frame" x="20" y="171.66666666666663" width="353" height="250"/>
+                                                <rect key="frame" x="20" y="151.66666666666663" width="353" height="250"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ywh-bY-THh">
                                                         <rect key="frame" x="0.0" y="0.0" width="353" height="55"/>
@@ -77,7 +77,7 @@
                                                 </constraints>
                                             </stackView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U8K-2B-85t">
-                                                <rect key="frame" x="20" y="441.66666666666669" width="353" height="56"/>
+                                                <rect key="frame" x="20" y="421.66666666666669" width="353" height="56"/>
                                                 <color key="backgroundColor" name="softBlue"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="56" id="l8v-IH-bAu"/>
@@ -91,8 +91,8 @@
                                                     <action selector="registerButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Z5X-YR-OkY"/>
                                                 </connections>
                                             </button>
-                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="imf-4n-LuH" customClass="SocialLoginView" customModule="EgitimPlatformuAI" customModuleProvider="target">
-                                                <rect key="frame" x="20" y="517.66666666666652" width="353" height="171.33333333333337"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="imf-4n-LuH" customClass="SocialLoginView" customModule="EgitimPlatformuAI" customModuleProvider="target">
+                                                <rect key="frame" x="20" y="497.66666666666657" width="353" height="191.33333333333331"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="string" keyPath="titleText" value="Or Register with"/>
@@ -112,7 +112,7 @@
                                             <constraint firstItem="imf-4n-LuH" firstAttribute="top" secondItem="U8K-2B-85t" secondAttribute="bottom" constant="20" id="ajb-yI-kTS"/>
                                             <constraint firstItem="U8K-2B-85t" firstAttribute="leading" secondItem="Gpb-6Y-YSE" secondAttribute="leading" constant="20" id="d10-SB-PUv"/>
                                             <constraint firstItem="SlC-38-UhK" firstAttribute="leading" secondItem="Gpb-6Y-YSE" secondAttribute="leading" constant="20" id="dJZ-cQ-PiL"/>
-                                            <constraint firstItem="1Kl-gH-Xbl" firstAttribute="top" secondItem="Gpb-6Y-YSE" secondAttribute="top" constant="20" id="hzJ-u8-NUB"/>
+                                            <constraint firstItem="1Kl-gH-Xbl" firstAttribute="top" secondItem="Gpb-6Y-YSE" secondAttribute="top" id="hzJ-u8-NUB"/>
                                             <constraint firstItem="imf-4n-LuH" firstAttribute="leading" secondItem="Gpb-6Y-YSE" secondAttribute="leading" constant="20" id="o4y-JS-jLE"/>
                                             <constraint firstItem="qau-rg-uMU" firstAttribute="top" secondItem="SlC-38-UhK" secondAttribute="bottom" constant="20" id="t1c-pX-bhm"/>
                                             <constraint firstItem="1Kl-gH-Xbl" firstAttribute="leading" secondItem="Gpb-6Y-YSE" secondAttribute="leading" constant="20" id="zDS-S7-uG9"/>
@@ -120,6 +120,7 @@
                                     </view>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="Gpb-6Y-YSE" firstAttribute="centerY" secondItem="zJD-jc-haq" secondAttribute="centerY" id="ItL-qT-Dhy"/>
                                     <constraint firstItem="Gpb-6Y-YSE" firstAttribute="top" secondItem="zJD-jc-haq" secondAttribute="top" id="Nlv-SE-WtM"/>
                                     <constraint firstItem="Gpb-6Y-YSE" firstAttribute="leading" secondItem="zJD-jc-haq" secondAttribute="leading" id="e8g-2k-RLu"/>
                                     <constraint firstAttribute="bottom" secondItem="Gpb-6Y-YSE" secondAttribute="bottom" id="hT2-MA-SqD"/>
